# jupyter-tigervnc-novnc-proxy

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  MANIFEST.in  Makefile  README.md  docker-compose.yaml  pyproject.toml
setup/: Dockerfile  jupyter_server_config.py  xfce4-desktop.xml
setup/etc/xdg/menus/: xfce-applications.menu
setup/etc/xdg/xdg-xubuntu/xfce4/xfconf/xfce-perchannel-xml/: xfce4-session.xml
setup/etc/xdg/xfce4/panel/: default.xml
setup/etc/xdg/xfce4/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml  xsettings.xml
src/jupyter_novnc_proxy/: __init__.py  vnc.sh
src/jupyter_novnc_proxy/novnc/: __init__.py  start-vnc-server.sh
src/jupyter_novnc_proxy/novnc/app/: ui.js
src/jupyter_tigervnc_novnc_proxy/: __init__.py  hooks.py  vnc.sh
src/jupyter_tigervnc_novnc_proxy/extras/: start-vnc-server-fg.sh  start-vnc-server.sh
src/jupyter_tigervnc_novnc_proxy/extras/supervisor/: supervisor.conf
src/jupyter_tigervnc_novnc_proxy/extras/supervisor/conf.d/: 10-vncserver.conf  20-novncproxy.conf
src/jupyter_tigervnc_novnc_proxy/novnc/: __init__.py  defaults.json
src/novnc_workbench/: __init__.py  jupyter_config.py
