[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-tigervnc-novnc-proxy"
version = "1.0.1"
authors = [
  { name="Matus Kosut", email="matus.kosut@ntnu.no" },
  { name="Jakub Hudak", email="jakub.hudak@ntnu.no" },
]
description = "Jupyter server proxy for NOVNC"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = [
    "jupyter-server-proxy",
    "websockify",
    "supervisor",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "Jupyter Proxy",
    "Jupyter Server Proxy",
    "JupyterLab",
]

[project.urls]
"Homepage" = "https://github.com/huntdatacenter/jupyter-tigervnc-novnc-proxy"

[project.optional-dependencies]
dev = ["black", "ruamel.yaml", "pytest", "pytest-cov"]

[project.entry-points.jupyter_serverproxy_servers]
novnc = "jupyter_tigervnc_novnc_proxy:run_app"

[project.scripts]
novnc-wait = "jupyter_tigervnc_novnc_proxy.hooks:wait_for_vnc_port"
novnc-supervisorctl = "jupyter_tigervnc_novnc_proxy.hooks:supervisorctl"
novnc-supervisord = "jupyter_tigervnc_novnc_proxy.hooks:supervisord"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_tigervnc_novnc_proxy"]

[tool.hatch.build]
sources = ["src"]
artifacts = [
  "*.svg",
]

[tool.hatch.build.targets.sdist]
artifacts = []
exclude = [".github", "setup", "Makefile", "docker-compose.yml"]

[tool.hatch.build.targets.jupyter_tigervnc_novnc_proxy]
